<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/blue_gray">

    <!-- Primer LinearLayout para la bienvenida y detalles -->
    <!-- Segundo LinearLayout para el contenido principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/blue_gray"
        android:gravity="center_horizontal">

        <!-- Primer layout: Selección de Sexo, Edad, Peso y Altura -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <!-- Selección de sexo -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="62dp"
                    android:src="@raw/goku" />

                <RadioGroup
                    android:id="@+id/Opcsexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/RadioM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masculino" />

                    <RadioButton
                        android:id="@+id/RadioF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/femenino" />
                </RadioGroup>
            </LinearLayout>

            <!-- Edad -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_margin="5dp">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="62dp"
                    android:src="@raw/goku" />

                <EditText
                    android:id="@+id/Textedad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/edad_a_os"
                    android:padding="16dp"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <!-- Tercer LinearLayout para área inferior o contenido adicional -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginTop="16dp">

            <!-- Peso -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="62dp"
                    android:src="@raw/goku" />

                <EditText
                    android:id="@+id/Textpeso"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/peso_kg"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!-- Altura -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_margin="5dp">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="62dp"
                    android:src="@raw/goku" />

                <EditText
                    android:id="@+id/Textaltura"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/altura_cm"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp">
        <Button
            android:id="@+id/BotonSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="regresar" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>